# sql_agent

./: LICENSE  README.md  app.py  pyproject.toml  setup_db.py
data/: chinook_export.xlsx
